<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="pl.krakow.nordic.szarki.MainActivity"
    tools:showIn="@layout/activity_main">


    <Button
        android:id="@+id/unit_one"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:background="@drawable/button_style"
        android:textColor="@color/icons"
        android:text="@string/unit_one"
        android:onClick="clickUnitOne"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="45dp"
        android:layout_marginTop="30dp"/>

    <Button
        android:id="@+id/unit_two"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:background="@drawable/button_style"
        android:textColor="@color/icons"
        android:text="@string/unit_two"
        android:onClick="clickUnitTwo"
        android:layout_below="@+id/unit_one"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="45dp"
        android:layout_marginTop="20dp"/>


    <Button
        android:id="@+id/unit_three"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:background="@drawable/button_style"
        android:textColor="@color/icons"
        android:text="@string/unit_three"
        android:onClick="clickUnitThree"
        android:layout_below="@+id/unit_two"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="45dp"
        android:layout_marginTop="20dp"/>


    <Button
        android:id="@+id/unit_four"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:background="@drawable/button_style"
        android:textColor="@color/icons"
        android:text="@string/unit_four"
        android:onClick="clickUnitFour"
        android:layout_below="@+id/unit_three"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="45dp"
        android:layout_marginTop="20dp"/>

    <Button
        android:id="@+id/unit_five"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:background="@drawable/button_style"
        android:textColor="@color/icons"
        android:text="@string/unit_five"
        android:onClick="clickUnitFive"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_marginRight="45dp"
        android:layout_marginTop="60dp"/>

    <Button
        android:id="@+id/unit_six"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:background="@drawable/button_style"
        android:textColor="@color/icons"
        android:text="@string/unit_six"
        android:onClick="clickUnitSix"
        android:layout_below="@+id/unit_five"
        android:layout_alignParentRight="true"
        android:layout_marginRight="45dp"
        android:layout_marginTop="20dp"/>

    <Button
        android:id="@+id/unit_seven"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:background="@drawable/button_style"
        android:textColor="@color/icons"
        android:text="@string/unit_seven"
        android:onClick="clickUnitSeven"
        android:layout_below="@+id/unit_six"
        android:layout_alignParentRight="true"
        android:layout_marginRight="45dp"
        android:layout_marginTop="20dp"/>


    <Button
        android:id="@+id/all"
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:background="@drawable/button_style"
        android:textColor="@color/icons"
        android:text="@string/all"
        android:onClick="cliclAll"
        android:layout_below="@+id/unit_four"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="100dp"/>



</RelativeLayout>
