<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="pl.krakow.nordic.szarki.UnitActivity"
    tools:showIn="@layout/activity_unit">
    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/primary_light">

        <View
            android:id="@+id/separatorv3"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:background="@android:color/black"/>

        <TextView
        android:id="@+id/p_word"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:textAlignment="center"
        android:layout_below="@+id/separatorv3"
        android:padding="20dp"
        android:textSize="40sp"
        />
    <View
        android:id="@+id/separator"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:background="@android:color/black"
        android:layout_below="@id/p_word"/>

    <TextView
        android:id="@+id/a_word"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:layout_centerHorizontal="true"
        android:padding="20dp"
        android:textSize="40sp"
        android:layout_below="@+id/separator"/>

    <View
        android:id="@+id/separatorv2"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:background="@android:color/black"
        android:layout_below="@id/a_word"/>

        <CheckBox
            android:id="@+id/show"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/primary_light"
            android:textColor="#000000"
            android:layout_below="@id/separatorv2"
            android:text="@string/poka_wyraz"
            android:onClick="showWord"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginStart="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"/>

        <CheckBox
            android:id="@+id/change"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/primary_light"
            android:textColor="#000000"
            android:text="@string/zamie_kolejno"
            android:onClick="newWord"
            android:layout_below="@+id/show"
            android:layout_alignParentStart="true"
            android:layout_marginStart="20dp"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="20dp"
            android:layout_marginBottom="10dp"/>


        <CheckBox
            android:id="@+id/random"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/primary_light"
            android:textColor="#000000"
            android:text="@string/losowo"
            android:layout_below="@+id/change"
            android:layout_alignParentStart="true"
            android:layout_marginStart="20dp"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="20dp"
            android:layout_marginBottom="15dp"/>

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/next"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_below="@id/separatorv2"
            app:srcCompat="@mipmap/yes"
            android:scaleType="center"
            android:onClick="nextWord"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_margin="20dp"/>

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/dontknow"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="@color/yes"
            android:layout_below="@id/separatorv2"
            android:onClick="dontknow"
            app:srcCompat="@mipmap/no"
            android:scaleType="center"
            android:layout_toLeftOf="@+id/next"
            android:layout_toStartOf="@+id/next"
            android:layout_marginTop="25dp"/>

        <View
            android:id="@+id/separatorv4"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_below="@id/random"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="10dp"
            android:background="@android:color/black"/>



        <Button
            android:id="@+id/wordlist"
            android:layout_width="170dp"
            android:background="@drawable/button_style"
            android:textColor="#FFFFFF"
            android:layout_height="wrap_content"
            android:text="@string/poka_liste_s_w"
            android:onClick="showList"
            android:layout_below="@+id/separatorv4"
            android:layout_centerHorizontal="true"
            android:layout_margin="20dp"/>

    </RelativeLayout>
</ScrollView>